bootstrap/config/manager/manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capoa-bootstrap-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capoa-bootstrap-controller-manager
  namespace: capoa-bootstrap-system
spec:
  selector:
    matchLabels:
      control-plane: capoa-bootstrap-controller-manager
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: capoa-bootstrap-controller-manager
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - command:
        - /manager
        args:
        - --leader-elect
        image: controller:latest
        imagePullPolicy: Always
        name: manager
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs/
            name: certs
      serviceAccountName: capoa-bootstrap-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - name: certs
          secret:
            secretName: capoa-bootstrap-webhook-cert-secret
